ukui-session-manager (2.0.6-5) v101; urgency=medium

  * Bug 号：无
  * 任务号：25371
  * 其他改动说明：无

 -- liuliang <liuliang@kylinos.cn>  Thu, 22 Apr 2021 14:56:27 +0800

ukui-session-manager (2.0.6-4) v101; urgency=medium

  * Bug号：  47273
  * 需求号：无
  * 其他改动：无

 -- liuliang <liuliang@kylinos.cn>  Tue, 20 Apr 2021 19:45:49 +0800

ukui-session-manager (2.0.6-3) v101; urgency=medium

  * 先起kwin后起桌面.

 -- liuliang <liuliang@kylinos.cn>  Thu, 08 Apr 2021 16:46:56 +0800

ukui-session-manager (2.0.6-2) v101; urgency=medium

  * 注销音乐添加。

 -- liuliang <liuliang@kylinos.cn>  Tue, 06 Apr 2021 01:39:42 +0800

ukui-session-manager (2.0.6-1) v101; urgency=medium

  * 解决部分机型偶现关机重启睡眠休眠不生效问题
  * 调整dpi缩放判断，将3k屏加入放大范围

 -- liuliang <liuliang@kylinos.cn>  Thu, 25 Mar 2021 09:25:52 +0800

ukui-session-manager (2.0.5-47) v101; urgency=medium

  * 接收usd启动完后发送的信号，解决bug #43527

 -- liuliang <liuliang@kylinos.cn>  Mon, 22 Mar 2021 11:19:54 +0800

ukui-session-manager (2.0.5-46) v101; urgency=medium

  * 设置关机选择界面壁纸跟随桌面壁纸，当桌面壁纸为颜色时，设置为默认壁纸。
  * 将图片染暗，突出按钮选项。

 -- liuliang <liuliang@kylinos.cn>  Tue, 16 Mar 2021 16:00:30 +0800

ukui-session-manager (2.0.5-45) v101; urgency=medium

  * 根据退出码判断程序是否重新拉起。

 -- liuliang <liuliang@kylinos.cn>  Tue, 16 Mar 2021 10:57:20 +0800

ukui-session-manager (2.0.5-44) v101; urgency=medium

  * 修复arm机器上，开始菜单和任务栏右键 关机重启睡眠，休眠选项不生效问题.

 -- liuliang <liuliang@kylinos.cn>  Sat, 13 Mar 2021 15:53:45 +0800

ukui-session-manager (2.0.5-43) v101; urgency=medium

  * 规避DBus初始化错误问题
  * 添加睡眠休眠和唤醒时的音乐

 -- liuliang <liuliang@kylinos.cn>  Thu, 11 Mar 2021 20:48:32 +0800

ukui-session-manager (2.0.5-42) v101; urgency=medium

  * 解决bug #41040 #41154
  * 更新锁文件中读取的内容

 -- liuliang <liuliang@kylinos.cn>  Wed, 03 Mar 2021 17:12:00 +0800

ukui-session-manager (2.0.5-41) v101; urgency=medium

  * 调整注销使用的dbus.

 -- liuliang <liuliang@kylinos.cn>  Mon, 01 Mar 2021 10:51:16 +0800

ukui-session-manager (2.0.5-40) v101; urgency=medium

  * 调整启动顺序，让peony先于ukui-kwin先起
